--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+
 
 :root, :root[data-theme='dark'] {
   --primary-color: #F0F0F0;
@@ -36,10 +39,15 @@
 
 body {
     background-color: var(--primary-bg-color);
+    font-family: 'Inter', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 i{
     color: var(--icon-color);
+}
+
+a {
+    text-decoration: none;
 }
 
 .header {
@@ -61,3 +69,53 @@ i{
     font-size: 1.5rem;
     color: var(--primary-color);
 }
+
+.menu {
+    display: flex;
+    align-items: center;
+    background: var(--primary-bg-color);
+}
+.menu__item {
+    width: 100%;
+}
+
+.menu--mobile {
+    width: 100vw;
+    position: fixed;
+    bottom: 0;
+    justify-content: space-between;
+    border-top: 1px solid var(--primary-border-color);
+}
+
+.menu--mobile .menu__link {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    gap: .5rem;
+}
+
+.menu__link.active .menu__icon, 
+.menu__link.active .menu__text {
+    color: var(--primary-color);
+}
+
+.menu__icon, .menu__text {
+    color: var(--text-color);
+    font-weight: 600;
+}
+
+.menu__icon {
+    font-size: 1.5rem;
+}
+
+.menu__text {
+    font-size: .75rem;
+    text-transform: uppercase;
+}
+
+@media(min-width: 768px){}
+@media (min-width: 992px){}
+@media (min-width: 1200px){}
+@media (min-width: 1400px){}
