--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -115,7 +115,11 @@ a {
     text-transform: uppercase;
 }
 
-@media(min-width: 768px){}
+@media(min-width: 768px){
+    .menu--mobile{
+        display: none;
+    }
+}
 @media (min-width: 992px){}
 @media (min-width: 1200px){}
 @media (min-width: 1400px){}
