--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -59,6 +59,11 @@ a {
     padding: 0.5rem 1rem;
 }
 
+.header__toggle{
+   display: flex;
+   justify-content: flex-end;
+}
+
 .header__brand .brand__logo {
     width: 3.25rem;
     height: 3.25rem;
@@ -97,14 +102,16 @@ a {
 }
 
 .menu__link.active .menu__icon, 
-.menu__link.active .menu__text {
-    color: var(--primary-color);
+.menu__link.active .menu__text,
+.menu__link:hover .menu__icon, 
+.menu__link:hover .menu__text {
+  color: var(--primary-color);
 }
 
-.menu__icon, .menu__text {
+.menu__icon, .menu__text{
     color: var(--text-color);
-    font-weight: 600;
 }
+
 
 .menu__icon {
     font-size: 1.5rem;
@@ -115,11 +122,53 @@ a {
     text-transform: uppercase;
 }
 
+.header__nav {
+    display: none;
+}
+
+.menu--principal {
+    gap: 1rem;
+}
+
 @media(min-width: 768px){
-    .menu--mobile{
+    
+    .header{
+        position: fixed;
+        border-bottom: 1px solid var(--primary-border-color);
+        padding: 1rem 6rem;
+        background: var(--primary-bg-color);
+    }
+    
+    .nav--mobile {
         display: none;
     }
+
+    .header__nav {
+    display: flex;
+
+    .header__nav,
+    .header__toggle{
+        min-width: 30%;
+    }
 }
-@media (min-width: 992px){}
-@media (min-width: 1200px){}
-@media (min-width: 1400px){}
+}
+@media (min-width: 992px){
+
+}
+@media (min-width: 1200px){
+
+}
+@media (min-width: 1400px){
+    .header {
+        padding: 1rem 15rem;
+    }
+
+    main {
+        padding: 12rem 15rem 2rem;
+    }
+    
+    .technologies, .projects, .about {
+        padding: 10rem 15rem 4rem;
+    }
+    
+}
