--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -84,6 +84,8 @@ a:hover{
 #toggleTheme {
     font-size: 1.5rem;
     color: var(--primary-color);
+    cursor: pointer;
+    transition: ease-in-out .4s;
 }
 
 .menu {
