--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -52,13 +52,21 @@ i{
     color: var(--icon-color);
 }
 
+h1 {
+    font-size: 2.5rem;
+    font-weight: 200;
+}
+
 h1, h2, h3 {
     font-family: 'League Spartan', Tahoma, Geneva, Verdana, sans-serif;
     text-transform: uppercase;
-    color: var(--primary-color);
+    color: var(--title-color);
+    font-weight: 200;
 }
 
 p {
+    font-size: 1.25rem;
+    text-align: justify;
     color: var(--primary-color);
 }
 
@@ -159,26 +167,56 @@ a:hover{
 }
 
 .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.625rem;
+    width: 100%;
     background: transparent;
     border-radius: 3.125rem;
     padding: 0.675rem;
     border: 1px solid var(--primary-color);
 }
 
-.btn--primary {
-    border: 1px solid var(--primary-color);
+.btn span, .btn i {
+    font-size: 1.25rem;
+    text-transform: uppercase;
 }
+
 
 .btn--primary span {
     color: var(--primary-color);
 }
 
+.btn--primary {
+    border: 1px solid var(--primary-color);
+}
 
 main {
     display: flex;
     flex-direction: column;
     gap: 2rem;
     padding: 2.5rem 1rem;
+}
+
+.main__content1{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.technologies{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 6.25rem 1rem 2rem 1rem;
+    background: var(--secondary-bg-color);
+    margin-top: -5.5rem;
+}
+
+.technologies h2 {
+    text-transform: none;
 }
 
 
