--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -279,6 +279,29 @@ footer p {
         min-width: 30%;
     }
 
+    h1 {
+        font-size: 5rem;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    main{
+        padding: 8rem 6rem 4rem 6rem;
+    }
+
+    .main__content1{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .technologies{
+        padding: 6.25rem 6rem 2rem 6rem;
+        margin-top: -6rem;
+    }
+
     footer {
         margin: 0;
     }
