--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,135 +46,288 @@ html [ddata-theme='light'] .technologies__logo {
 }
 
 body {
-   background: var(--primary-bg-color);
-   font-family:'Inter', Verdana, Geneva, Tahoma, sans-serif;
-   color: var(--text-color);
+  background: var(--primary-bg-color);
+  font-family:'Inter', Verdana, Geneva, Tahoma, sans-serif;
+  color: var(--text-color);
 }
 
 ::-webkit-scrollbar {
-    width: 0.5rem;
+  width: 0.5rem;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--secondary-bg-color);
-    border-radius: 50rem;
+  background: var(--secondary-bg-color);
+  border-radius: 50rem;
 }
 
 a {
-    text-decoration: none;
-    color: var(--text-color);
+  text-decoration: none;
+  color: var(--text-color);
 }
 a:hover {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
 i {
-    color: var(--icon-color);
+  color: var(--icon-color);
 }
 
 b {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 h1 {
-    font-size: 2.5rem;
-    font-weight: 200;
+  font-size: 2.5rem;
+  font-weight: 200;
 }
 
 h2{
-    font-size: 1.55rem;
-    text-align: center;
-    letter-spacing: 0.4rem;
+  font-size: 1.55rem;
+  text-align: center;
+  letter-spacing: 0.4rem;
 }
 
 h3{
-    font-size: 2rem;
-    text-align: left;
+  font-size: 2rem;
+  text-align: left;
 }
 
 h4{
-    color: var(--primary-color);
-    font-weight: 400;
-    font-size: 1.15rem;
-    text-align: left;
+  color: var(--primary-color);
+  font-weight: 400;
+  font-size: 1.15rem;
+  text-align: left;
 }
 
 h1, h2, h3 {
-    font-family: 'League Spartan', Tahoma, Geneva, Verdana, sans-serif;
-    text-transform: uppercase;
-    color: var(--title-color);
-    font-weight: 200;
+  font-family: 'League Spartan', Tahoma, Geneva, Verdana, sans-serif;
+  text-transform: uppercase;
+  color: var(--title-color);
+  font-weight: 200;
 }
 
 p, span, li {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 p {
-    text-align: justify;
+  text-align: justify;
 }
 
 .header {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 0.5rem 1rem;
-    z-index: 2;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 0.5rem 1rem;
+  z-index: 2;
 }
 
 .header__toggle {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .header__brand .brand__logo {
-    width: 3.25rem;
-    height: 3.25rem;
+  width: 3.25rem;
+  height: 3.25rem;
 }
 
 #toggleTheme {
-    font-size: 1.5rem;
-    color: var(--primary-color);
-    cursor: pointer;
-    transition: ease-in-out .4s;
+  font-size: 1.5rem;
+  color: var(--primary-color);
+  cursor: pointer;
+  transition: ease-in-out .4s;
 }
 
 .menu {
-    display: flex;
-    align-items: center;
-    background: var()var(--primary-bg-color);
+  display: flex;
+  align-items: center;
+  background: var()var(--primary-bg-color);
 }
 
 .menu__item {
-    width: 100%;
+  width: 100%;
 }
 
 .menu__link {
-    display: flex;
-    align-items: center;
-    gap: .5rem;
+  display: flex;
+  align-items: center;
+  gap: .5rem;
 }
 
 .menu--mobile {
-    width: 100vw;
-    position: fixed;
-    bottom: 0;
-    justify-content: space-between;
-    border-top: 1px solid var(--primary-border-color);
+  width: 100vw;
+  position: fixed;
+  bottom: 0;
+  justify-content: space-between;
+  border-top: 1px solid var(--primary-border-color);
 }
 
 .menu--mobile .menu__link {
-    flex-direction: column;
-    justify-content: center;
-    padding: 0.5rem 1rem;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0.5rem 1rem;
 }
 
+.menu__link.active .menu__icon,
+.menu__link.active .menu__text,
+.menu__link:hover .menu__icon,
+.menu__link:hover .menu__text {
+  color: var(--primary-color);
+}
+
+.menu__icon, .menu__text {
+  color: var(--text-color);
+}
+
+.menu__icon {
+  font-size: 1.5rem;
+}
+
+.menu__text {
+  font-size: .75rem;
+  text-transform: uppercase;
+}
+
+.header__nav {
+  display: none;
+}
+
+.menu--principal {
+  gap: 1rem;
+}
+
+.menu--social {
+  gap: 1rem;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.625rem;
+  width: 100%;
+  background: transparent;
+  border-radius: 3.125rem;
+  border: none;
+  padding: 0.875rem 1.5rem;
+  transition: ease-in-out .3s;
+  cursor: pointer;
+  color: var(--primary-color);
+}
+
+.btn:hover {
+  transform: scale(1.05);
+  transition: ease-in-out .3s;
+}
+
+.btn span, .btn i {
+  font-size: 1.25rem;
+  text-transform: uppercase;
+}
+
+.btn--primary span {
+  color: var(--primary-color);
+}
+
+.btn--primary {
+  border: 1px solid var(--primary-color);
+}
+
+main, .projects, .about, .contact {
+  padding: 2.5rem 1rem;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.main__content1 {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.technologies {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1.25rem;
+  padding: 6.25rem 1rem 2rem;
+  background: var(--secondary-bg-color);
+  margin-top: -5.5rem;
+}
+
+.technologies h2 {
+  font-size: 2rem;
+  text-transform: none;
+  letter-spacing: normal;
+  text-align: start;
+}
+
+.technologies__list {
+  display: flex;
+  flex-flow: row wrap;
+  gap: .5rem;
+}
+
+.technologies__item {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 4.8rem;
+  height: 4,8rem;
+  aspect-ratio: 1/1;
+  border: 1px solid var(--secondary-border-color);
+  border-radius: 50rem;
+}
+
+.technologies__logo{
+  height: 2.4rem;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.projects__container {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+}
+
+.projects__card {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.card__cover {
+  width: 100%;
+  border-radius: 0.5rem;
+  object-fit: cover;
+  object-position: center;
+}
+
+.card__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 1rem;
+}
 
 
 @media (min-width: 768px) {
